views/stylesheets/style.css.scss
html {
  height: 100%;
}

// colors
$dark-text: #323232;
$light-text: #717272;
$info-text: #65ade3;
$dark-background: #252525;
$hover-background: #d0d2d2;
$selected-background: $info-text;
$mid-background: #fbfbfb;
$header-background: $hover-background;
$light-background: #fff;
$divider: #ebeeee;
$section-divider: #b1b1b1;
$menubar-height: 30px;
$leftcol-width: 299px;

body {
  font-family: 'Helvetica', Arial, sans-serif;
  font-size: 0.8em;
  color: $dark-text;
  height: 100%;
  margin: 0;
  padding: 0;
}

#menuBar {
  position: absolute;
  left: 0px;
  top: 0px;
  width: 100%;
  height: $menubar-height;
  border-bottom: 1px solid $section-divider;

  #leftBar {
    position: absolute;
    top: 0px;
    left: 0px;
    width: $leftcol-width;
    height: 100%;
    //border-right: 1px solid $section-divider;
  }

  #rightBar {
    position: absolute;
    top: 0px;
    left: $leftcol-width + 1px;
    width: 800px - $leftcol-width;
    height: 100%;
  }

  background: #ffffff;
  background: -moz-linear-gradient(top, #ffffff 0%, #eaeaea 100%);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#eaeaea));
  background: -webkit-linear-gradient(top, #ffffff 0%,#eaeaea 100%);
  background: -o-linear-gradient(top, #ffffff 0%,#eaeaea 100%);
  background: -ms-linear-gradient(top, #ffffff 0%,#eaeaea 100%);
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#eaeaea',GradientType=0 );
  background: linear-gradient(top, #ffffff 0%,#eaeaea 100%);
}

#leftColumn {
  position: absolute;
  top: $menubar-height + 1px;
  left: 0;
  width: $leftcol-width;
  height: 600px - $menubar-height;
  #threadList {
    position: absolute;
    width: 100%;
    height: 100%;
    overflow: auto;
    border-right: 1px solid $section-divider;

    .thread {
      border-bottom: 1px solid $divider;
      padding: 9px;
      position: relative;
      cursor: pointer;
      color: $light-text;

      background: #fefefe;
      background: -moz-linear-gradient(top, #fefefe 0%, #fbfbfb 99%);
      background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fefefe), color-stop(99%,#fbfbfb));
      background: -webkit-linear-gradient(top, #fefefe 0%,#fbfbfb 99%);
      background: -o-linear-gradient(top, #fefefe 0%,#fbfbfb 99%);
      background: -ms-linear-gradient(top, #fefefe 0%,#fbfbfb 99%);
      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fefefe', endColorstr='#fbfbfb',GradientType=0 );
      background: linear-gradient(top, #fefefe 0%,#fbfbfb 99%);

      header {
        position: relative;
        margin-bottom: 7px;
        .contact {
          font-size: 1.1em;
          font-weight: bold;
          color: $dark-text;
        }
        .date {
          position: absolute;
          right: 5px;
          color: $info-text;
        }
      }
    }
    .thread.unread {
      background: $hover-background;
    }
    .thread:hover {
      background: $hover-background;
    }
    .thread.selected {
      background: $selected-background;
      color: #fff;
      header {
        .date {
          color: #fff;
        }
      }
    }
  }
}

.loading {
  width: 300px;
  padding-top: 300px;
  font-size: 1.8em;
  color: $light-text;
  margin: 0 auto;
  text-align: center;

  img {
    display: block;
    margin: 10px auto;
  }
}

#rightColumn {
  position: absolute;
  top: $menubar-height + 1px;
  left: $leftcol-width + 1;
  width: 800px - $leftcol-width - 1;
  height: 600px - $menubar-height;
  background-color: $light-background;
  .threadView {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    overflow: auto;

    .cont {
      padding: 20px 50px 20px 20px;
      > header {
        position: relative;
        padding: 0px 15px;
        margin-bottom: 20px;
        font-size: 1.2em;
        .reply-button {
          position: absolute;
          right: 15px;
          top: 0px;
          cursor: pointer;
        }
      }
    }

    .message {
      font-size: 1.2em;
      padding: 10px 15px;
      margin-bottom: 15px;
      position: relative;
      line-height: 130%;

      border: 1px solid $divider;
      -webkit-border-radius: 5px;
      -moz-border-radius: 5px;
      border-radius: 5px;
      -webkit-box-shadow: 1px 1px 1px 0px #ddd;
      -moz-box-shadow: 1px 1px 1px 0px #ddd;
      box-shadow: 1px 1px 1px 0px #ddd;

      header {
        font-size: 0.9em;
        position: relative;
        margin-bottom: 5px;
        .contact {
          font-weight: bold;
        }
        .date, .menu {
          position: absolute;
          right: 5px;
        }
        .date, .menu a {
          color: $light-text;
        }
        .menu {
          display: none;
        }
      }
      a {
        color: $info-text;
        text-decoration: none;
      }
      a:hover {
        text-decoration: underline;
      }
    }
    .message.you {
      background: #fefefe;
      background: -moz-linear-gradient(top, #fefefe 0%, #fbfbfb 99%);
      background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fefefe), color-stop(99%,#fbfbfb));
      background: -webkit-linear-gradient(top, #fefefe 0%,#fbfbfb 99%);
      background: -o-linear-gradient(top, #fefefe 0%,#fbfbfb 99%);
      background: -ms-linear-gradient(top, #fefefe 0%,#fbfbfb 99%);
      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fefefe', endColorstr='#fbfbfb',GradientType=0 );
      background: linear-gradient(top, #fefefe 0%,#fbfbfb 99%);
    }
    .message:hover {
      .date {
        display: none;
      }
      .menu {
        display: inline;
      }
    }

    .replyView {
      background-color: $mid-background;
      padding: 20px 50px 10px 20px;
      border-bottom: 1px solid $section-divider;
      textarea {
        height: 60px;
        padding: 10px;
        font-family: 'Helvetica', Arial, sans-serif;
        font-size: 1.4em;
        border: 1px solid $divider;
        -webkit-border-radius: 5px;
        -moz-border-radius: 5px;
        border-radius: 5px;
        margin-bottom: 5px;
      }
    }
  }
}

